crates/keron-lang/tests/corpus/errors/check/nullable_match_missing_null_arm.keron
val maybe_name: String? = "alice"

val name: String = match maybe_name {
  "alice" => "ok",
}
